--- a/steganography/Steganalysis of Jsteg_HW2/README
+++ b/steganography/Steganalysis of Jsteg_HW2/README
@@ -1,3 +1,4 @@
+HW2 based on the JPEG Toolbox
 Matlab JPEG Toolbox
 ===================
 This distribution contains routines for manipulating files formatted
